crates/es-fluent-derive/tests/ui/field_only_key_on_enum_variant.rs
use es_fluent_derive::EsFluent;

#[derive(EsFluent)]
pub enum LoginError {
    #[fluent(arg = "username")]
    MissingUser(String),
}

fn main() {}
